# pangea-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  build_simple.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: basics.pangea  hello.pangea  types.pangea
include/: function_entry.hpp  interpreter.hpp  parser.hpp  value.hpp
scripts/: build.sh
src/: function_entry.cpp  interpreter.cpp  main.cpp  parser.cpp  value.cpp
tests/: test_main.cpp
